fix: add rem for gap

--- a/src/styles.css
+++ b/src/styles.css
@@ -50,7 +50,7 @@ header {
 
 .menu {
   display: flex;
-  gap: 20px;
+  gap: 1.5rem;
 }
 
 .button-selected {
@@ -200,7 +200,7 @@ header {
   }
 
   .menu {
-    gap: 0.5rem;
+    gap: 1rem;
   }
 
   .social-media {
